# pocket_protector

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  USER_GUIDE.md  pyproject.toml  requirements.in  tox.ini
.github/workflows/: publish.yml  tests.yml
.omp/skills/release/: SKILL.md
docs/: api.rst  changelog.rst  cli.rst  comparison.rst  conf.py  faq.rst  index.rst  installation.rst  python_usage.rst  requirements-rtd.txt  security.rst  tutorial.rst  why.rst
pocket_protector/: __init__.py  __main__.py  _version.py  cli.py  file_keys.py
pocket_protector/tests/: conftest.py  test_cli.py  test_file_keys.py
